--- a/app/src/main/res/layout/activity_radio_list.xml
+++ b/app/src/main/res/layout/activity_radio_list.xml
@@ -8,7 +8,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="80dp">
+
+        <include layout="@layout/toolbar"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_radio_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
         <android.support.design.widget.BottomNavigationView
             android:id="@+id/bnv"
@@ -18,12 +27,6 @@
             app:itemTextColor="@drawable/color_item_menu"
             app:itemIconTint="@drawable/color_item_menu"
             app:menu="@menu/menu_bottomnv"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_radio_list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="70dp"/>
     </LinearLayout>
 
     <include layout="@layout/sheet_behavior" />
@@ -34,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:elevation="6dp"
+        android:contentDescription="Like"
         android:src="@drawable/ic_favorite_border"
         app:fabSize="normal"
         app:layout_anchor="@+id/bottom_sheet"
