--- a/app/src/main/res/layout/activity_radio_list.xml
+++ b/app/src/main/res/layout/activity_radio_list.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_marginBottom="80dp">
+        android:orientation="vertical">
 
         <include layout="@layout/toolbar"/>
 
@@ -19,17 +18,21 @@
             android:layout_height="match_parent"
             android:layout_weight="1"/>
 
-        <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bnv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimary"
-            app:itemTextColor="@drawable/color_item_menu"
-            app:itemIconTint="@drawable/color_item_menu"
-            app:menu="@menu/menu_bottomnv"/>
+
     </LinearLayout>
 
     <include layout="@layout/sheet_behavior" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bnv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:itemTextColor="@drawable/color_item_menu"
+        app:itemIconTint="@drawable/color_item_menu"
+        app:menu="@menu/menu_bottomnv"
+        app:layout_anchor="@+id/bottom_sheet"
+        app:layout_anchorGravity="bottom|center_vertical" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_like"
