--- a/app/src/main/res/layout/activity_radio_list.xml
+++ b/app/src/main/res/layout/activity_radio_list.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:elevation="6dp"
-        android:contentDescription="Like"
+        android:contentDescription="@string/like"
         android:src="@drawable/ic_favorite_border"
         app:fabSize="normal"
         app:layout_anchor="@+id/bottom_sheet"
