--- a/app/src/main/res/layout/activity_radio_list.xml
+++ b/app/src/main/res/layout/activity_radio_list.xml
@@ -15,10 +15,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_radio_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"/>
-
-
     </LinearLayout>
 
     <include layout="@layout/sheet_behavior" />
